Test Sandbox Project/src/objects/Response__c.object
<CustomObject>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <formula>IF(CONTAINS(Question_Desc__c, &apos;Dewi Andriayani&apos;), &apos;Dewi Andriayani&apos;, 
IF(CONTAINS(Question_Desc__c, &apos;Felisitas&apos;), &apos;Felisitas&apos;,
IF(CONTAINS(Question_Desc__c, &apos;Nova Hadiansyah&apos;), &apos;Nova Hadiansyah&apos;, 
IF(CONTAINS(Question_Desc__c, &apos;Wahyu Putri&apos;), &apos;Wahyu Putri&apos;, &apos;Other&apos;  
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Boolean_Response__c</fullName>
        <label>Boolean Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>true</fullName>
                </value>
                <value>
                    <fullName>false</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Correct_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correct Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Feedback_Response__c</fullName>
        <formula>Question__r.Is_Feedback__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Feedback Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Learning_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Assignment</label>
        <referenceTo>Learning_Assignment__c</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Learning_Name__c</fullName>
        <formula>Learning_Assignment__r.Learning__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Learning Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Response__c</fullName>
        <label>Number Response</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Point__c</fullName>
        <inlineHelpText>Filled by Internal Tokopedia</inlineHelpText>
        <label>Point</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Desc__c</fullName>
        <formula>Question__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Line__c</fullName>
        <formula>Question__r.Question_Line__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <formula>TEXT(Question__r.Type__c)</formula>
        <label>Question Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Answer_Sequence_Label__c</fullName>
        <label>Response Answer Sequence Label</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Answer_Sequence_Long__c</fullName>
        <label>Response Answer Sequence Long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Answer_Sequence__c</fullName>
        <label>Response Answer Sequence</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_Text_Long__c</fullName>
        <label>Response Text Long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Text__c</fullName>
        <label>Response Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shared_Learning_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shared Learning Assignment</label>
        <referenceTo>Shared_Learning_Assignment__c</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Response</label>
    <listViews>
        <fullName>Agent_Yufan</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Learning_Assignment__c</columns>
        <columns>Question__c</columns>
        <columns>Question_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Correct_Response__c</columns>
        <columns>Boolean_Response__c</columns>
        <columns>Response_Text__c</columns>
        <columns>Response_Text_Long__c</columns>
        <columns>Number_Response__c</columns>
        <columns>Response_Answer_Sequence__c</columns>
        <columns>Response_Answer_Sequence_Label__c</columns>
        <columns>Response_Answer_Sequence_Long__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>contains</operation>
            <value>yufan</value>
        </filters>
        <label>Agent Yufan</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Agent_Yufan_need_confirm</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Learning_Assignment__c</columns>
        <columns>Question__c</columns>
        <columns>Question_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Correct_Response__c</columns>
        <columns>Boolean_Response__c</columns>
        <columns>Response_Text__c</columns>
        <columns>Response_Text_Long__c</columns>
        <columns>Number_Response__c</columns>
        <columns>Response_Answer_Sequence__c</columns>
        <columns>Response_Answer_Sequence_Label__c</columns>
        <columns>Response_Answer_Sequence_Long__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>contains</operation>
            <value>yufan</value>
        </filters>
        <filters>
            <field>Correct_Response__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Agent Yufan - need confirm</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Learning_Assignment__c</columns>
        <columns>Question__c</columns>
        <columns>Question_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Correct_Response__c</columns>
        <columns>Boolean_Response__c</columns>
        <columns>Response_Text__c</columns>
        <columns>Response_Text_Long__c</columns>
        <columns>Number_Response__c</columns>
        <columns>Response_Answer_Sequence__c</columns>
        <columns>Response_Answer_Sequence_Label__c</columns>
        <columns>Response_Answer_Sequence_Long__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RES-{0000000}</displayFormat>
        <label>Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>